--- a/styles.css
+++ b/styles.css
@@ -2,15 +2,25 @@ body {
     background-color: #F7A5A5;
 }
 
+.complimentaryH1 {
+    font-size: 40px;
+    display:flex;
+    justify-content: center;
+    margin-top: -15px;
+    font-family: 'Oswald', sans-serif;
+    color: #ffffff;
+    text-shadow: 3px 0px 0px black;
+}
+
 p {
     font-family: 'Oswald', sans-serif;
 }
 
 .title {
-font-size:50px;
+    font-size: 50px;
     font-family: 'Oswald', sans-serif;
     color: #ffffff;
-    text-shadow: 6px 0px 0px black;
+    text-shadow: 3px 0px 0px black;
 }
 
 .divVideo {
@@ -23,61 +33,70 @@ h1 {
     display: flex;
     justify-content: center;
     margin: auto;
-    color:black;
+    color: black;
 }
 
 /* buttons */
 
 .divButtons {
-display:flex;
-justify-content:center;
-gap:40px;
-padding: 0;
-
-
-    .buttons {
-        width: 120px;
-        height: 70px;
-        border-radius: 12px;
-        border:2px solid white;
-        font-family: 'Oswald', sans-serif;
-        color:#ffffff;
-        background-color: #102341;
-        text-shadow: 0px 4px 2px #0A1627;
-        font-size:20px;
-    }
-
-    .buttons:hover {
-        transition: 300ms;
-        cursor: pointer;
-        color: #102341;
-        background-color: #ffffff;
-        text-shadow: none;
-        width: 130px;
-        border: 2px solid #102341;
-        box-shadow: 0px 0px 20px black;
-    }
-
-    #button1 {
-
-    }
-
-    #button2 {
-
-    }
-
-    #button3 {
-
-    }
+    display: flex;
+    justify-content: center;
+    gap: 40px;
+    padding: 20px;
 }
 
+
+.buttons {
+    width: 120px;
+    height: 70px;
+    border-radius: 12px;
+    border: 2px solid white;
+    font-family: 'Oswald', sans-serif;
+    color: #ffffff;
+    background-color: #102341;
+    text-shadow: 0px 4px 2px #0A1627;
+    font-size: 20px;
+}
+
+.buttons:hover {
+    transition: 300ms;
+    cursor: pointer;
+    color: #102341;
+    background-color: #ffffff;
+    text-shadow: none;
+    width: 130px;
+    border: 2px solid #102341;
+    box-shadow: 0px 0px 20px black;
+}
+
+#button1 {
+
+}
+
+#button2 {
+
+}
+
+#button3 {
+
+}
+
+
 /* Effect for buttons - Inspiration from @TousifsCodeAcademy */
-.divButtons:hover .buttons {
+.divButtons:has (.buttons:hover) .buttons {
     filter: blur(3px);
     opacity: 0.5;
 }
 
-.divButtons:hover .buttons:hover {
-    filter:none;
+.divButtons .buttons:hover {
+    filter: none;
     opacity: 1;
 }
+
+.charts {
+    display:flex;
+    flex-direction: column;
+    align-items:center;
+    gap: 30px;
+}
+
